[project]
name = "SBDP"
version = "0.1.0"
description = "Spark-Bulk-data-processing"
requires-python = "==3.10"
dependencies = [
    "pyspark==4.0.1",
    "findspark>=2.0.1",
    "pytest>=9.0.2",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "grpcio>=1.76.0",
    "grpcio-status>=1.76.0",
    "chispa>=0.11.1", #for df equalty
]
